# AgentWorld

./: .gitignore  README.md  pyproject.toml  会议记录.txt
.github/workflows/: ci.yml
docs/: architecture.md  auto-research-use-case.md  autor-parity.md  index.html  todo.md
docs/assets/: site.css
docs/ppt/: slide-01-overview.md
examples/: claude_real_smoke.py  claude_skill_smoke.py  planner_coder_reviewer.py
examples/auto-research/: README.md  run.py
src/agentworld/: __init__.py  skill_loader.py
src/agentworld/approval/: __init__.py  base.py
src/agentworld/apps/: __init__.py  auto_research.py
src/agentworld/artifacts/: __init__.py  index.py  models.py
src/agentworld/controller/: __init__.py  base.py  claude_code.py  codex.py  openclaw.py
src/agentworld/graph/: __init__.py  builder.py  compiled.py  edge.py  node.py  reducers.py
src/agentworld/manifest/: __init__.py  run.py
src/agentworld/operator/: __init__.py  base.py  models.py
src/agentworld/protocol/: __init__.py  a2a.py  artifacts.py
src/agentworld/research/: __init__.py  evidence.py  experiment.py  hypothesis.py  writing.py
src/agentworld/runtime/: __init__.py  events.py  executor.py
src/agentworld/stage/: __init__.py  handoff.py  markdown.py  models.py  operator.py  prompts.py
src/agentworld/workflows/: __init__.py  (+1 more)
tests/: test_artifact_primitives.py  test_auto_research_app.py  test_auto_research_workflow.py  test_builder.py  test_claude_code_controller.py  test_graph.py  test_research_manifests.py  test_run_manifest.py  test_skill_loader.py  test_workspace_primitives.py
(+3 files in other folders)
